Fix pause button and admin logo spacing

--- a/src/components/Sections/Sliders/HeroSlider/HelperComps/SliderContent/SliderContent.module.scss
+++ b/src/components/Sections/Sliders/HeroSlider/HelperComps/SliderContent/SliderContent.module.scss
@@ -192,6 +192,7 @@
               top: inherit;
               right: inherit;
               filter: var(--isDark);
+              margin-top: 1rem;
             }
         }
       }
